--- a/ProtoNN.ipynb
+++ b/ProtoNN.ipynb
@@ -770,16 +770,7 @@
         "id": "GlyMLKngmf-t"
       },
       "source": [
-        "#Prototypical Netwoks on the Omniglot dataset"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "70f3awDiuabG"
-      },
-      "source": [
-        "You can save a copy to your Drive before executing this notebook"
+        "#Prototypical Netwoks on the CDC Parasitic dataset"
       ]
     },
     {
@@ -790,10 +781,11 @@
       "source": [
         "\n",
         "\n",
-        "*   `Author:` Cyprien NIELLY\n",
-        "*   `Date:` 05/2020\n",
-        "*   `Credit:` Main source of inspiration [https://github.com/jakesnell/prototypical-networks](https://github.com/jakesnell/prototypical-networks)\n",
-        "\n"
+        "*   `Author:` Ambesh Shekhar\n",
+        "*   `Date:` 03/2021\n",
+        "*   `Credit:` \n",
+        "  - Main source of inspiration [https://github.com/jakesnell/prototypical-networks](https://github.com/jakesnell/prototypical-networks)\n",
+        "  - Derived from [https://github.com/cnielly/prototypical-networks-omniglot](https://github.com/cnielly/prototypical-networks-omniglot)\n"
       ]
     },
     {
@@ -815,10 +807,10 @@
         "outputId": "96b10a60-9501-4201-f4cd-2c504968b295"
       },
       "source": [
-        "!wget https://raw.githubusercontent.com/AmbiTyga/Bio-VI-BERT/main/Dataset.7z\r\n",
+        "!wget https://raw.githubusercontent.com/AmbiTyga/Bio-VI-BERT/main/Dataset.7z\n",
         "!7z x /content/Dataset.7z"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -883,7 +875,7 @@
         "import torch.optim as optim\n",
         "from torch.autograd import Variable"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -894,7 +886,7 @@
       "source": [
         "!rm Parasites -r"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -905,7 +897,7 @@
       "source": [
         "data = pd.read_csv(\"/content/parasite.csv\")"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -916,7 +908,7 @@
       "source": [
         "data['species'] = data['species'].str.replace('.','')"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -925,10 +917,10 @@
         "id": "Ixb61E5WYkLG"
       },
       "source": [
-        "for path in data['species'].unique():\r\n",
+        "for path in data['species'].unique():\n",
         "  os.makedirs(f\"/content/Parasites/{path}\")"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -937,25 +929,25 @@
         "id": "AH34Pa6_YkIJ"
       },
       "source": [
-        "t = []\r\n",
-        "t.append(torchvision.transforms.Compose([\r\n",
-        "        torchvision.transforms.GaussianBlur(5),\r\n",
-        "        torchvision.transforms.RandomPerspective(p=1)]))\r\n",
-        "\r\n",
-        "t.append(torchvision.transforms.Compose([\r\n",
-        "        torchvision.transforms.GaussianBlur(5),\r\n",
-        "        torchvision.transforms.RandomVerticalFlip(p=1)]))\r\n",
-        "\r\n",
-        "\r\n",
-        "t.append(torchvision.transforms.Compose([\r\n",
-        "        torchvision.transforms.Grayscale(3),\r\n",
-        "        torchvision.transforms.RandomVerticalFlip(p=1)]))\r\n",
-        "\r\n",
-        "t.append(torchvision.transforms.Compose([\r\n",
-        "        torchvision.transforms.Grayscale(3),\r\n",
+        "t = []\n",
+        "t.append(torchvision.transforms.Compose([\n",
+        "        torchvision.transforms.GaussianBlur(5),\n",
+        "        torchvision.transforms.RandomPerspective(p=1)]))\n",
+        "\n",
+        "t.append(torchvision.transforms.Compose([\n",
+        "        torchvision.transforms.GaussianBlur(5),\n",
+        "        torchvision.transforms.RandomVerticalFlip(p=1)]))\n",
+        "\n",
+        "\n",
+        "t.append(torchvision.transforms.Compose([\n",
+        "        torchvision.transforms.Grayscale(3),\n",
+        "        torchvision.transforms.RandomVerticalFlip(p=1)]))\n",
+        "\n",
+        "t.append(torchvision.transforms.Compose([\n",
+        "        torchvision.transforms.Grayscale(3),\n",
         "        torchvision.transforms.RandomPerspective(p=1)]))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -964,16 +956,16 @@
         "id": "8goF_Sf8YkFW"
       },
       "source": [
-        "def transform_save(data,index):\r\n",
-        "  img = Image.open(data[8])\r\n",
-        "  images = [img]\r\n",
-        "  images.extend((T(img) for T in t))\r\n",
-        "  for i, image in enumerate(images):\r\n",
-        "    image.convert('RGB').save(f\"/content/Parasites/{data[3]}/T_{i}_{index}.jpg\")\r\n",
-        "  values = [[data[0],data[1],data[2],data[3],data[4],data[5],f\"/content/Parasites/{data[3]}/T_{i}_{index}.jpg\"] for i in range(len(images))]\r\n",
-        "  return values\r\n"
+        "def transform_save(data,index):\n",
+        "  img = Image.open(data[8])\n",
+        "  images = [img]\n",
+        "  images.extend((T(img) for T in t))\n",
+        "  for i, image in enumerate(images):\n",
+        "    image.convert('RGB').save(f\"/content/Parasites/{data[3]}/T_{i}_{index}.jpg\")\n",
+        "  values = [[data[0],data[1],data[2],data[3],data[4],data[5],f\"/content/Parasites/{data[3]}/T_{i}_{index}.jpg\"] for i in range(len(images))]\n",
+        "  return values\n"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -982,11 +974,11 @@
         "id": "B6VzMpfRfq-2"
       },
       "source": [
-        "new = []\r\n",
-        "for i in data.index:\r\n",
+        "new = []\n",
+        "for i in data.index:\n",
         "  new.extend(transform_save(data.iloc[i,:].values,index =i))"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -997,7 +989,7 @@
       "source": [
         "data = pd.DataFrame(new,columns=['phylum','class','genus','species','form','sample','img_path'])"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1012,7 +1004,7 @@
       "source": [
         "data['species'].value_counts()"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1087,11 +1079,11 @@
         "id": "Lo3f70zqYWi2"
       },
       "source": [
-        "from sklearn.model_selection import train_test_split\r\n",
-        "\r\n",
-        "train_data, val_data = train_test_split(data,test_size = 0.25, stratify = data['species'])\r\n"
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "train_data, val_data = train_test_split(data,test_size = 0.25, stratify = data['species'])\n"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1100,14 +1092,14 @@
         "id": "u5RLZXszjBlU"
       },
       "source": [
-        "transform = torchvision.transforms.Compose([\r\n",
-        "                                            torchvision.transforms.Resize((224,224)),\r\n",
-        "                                            torchvision.transforms.ToTensor(),\r\n",
-        "                                            torchvision.transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225]),\r\n",
-        "                                            torchvision.transforms.Resize((45,45))\r\n",
+        "transform = torchvision.transforms.Compose([\n",
+        "                                            torchvision.transforms.Resize((224,224)),\n",
+        "                                            torchvision.transforms.ToTensor(),\n",
+        "                                            torchvision.transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225]),\n",
+        "                                            torchvision.transforms.Resize((45,45))\n",
         "])"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1150,7 +1142,7 @@
         "      'n_query': n_query\n",
         "      })"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1172,7 +1164,7 @@
         "  plt.figure(figsize = (16,7))\n",
         "  plt.imshow(out.permute(1, 2, 0))"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1232,7 +1224,7 @@
         "sample_example = extract_sample(8, 5, 5, train_data)\n",
         "display_sample(sample_example['images'])"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1351,7 +1343,7 @@
         "    \n",
         "  return ProtoNet(encoder)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1418,7 +1410,7 @@
         "        'y_hat': y_hat\n",
         "        }"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1446,7 +1438,7 @@
         "\n",
         "  return torch.pow(x - y, 2).sum(2)"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1467,7 +1459,7 @@
         "from tqdm import tqdm_notebook\n",
         "from tqdm.notebook import tnrange"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1514,7 +1506,7 @@
         "    epoch += 1\n",
         "    scheduler.step()"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1563,7 +1555,7 @@
         "\n",
         "train(model, optimizer, train_data, n_way, n_support, n_query, max_epoch, epoch_size)"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1653,7 +1645,7 @@
         "  avg_acc = running_acc / test_episode\n",
         "  print('Test results -- Loss: {:.4f} Acc: {:.4f}'.format(avg_loss, avg_acc))"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1697,7 +1689,7 @@
         "\n",
         "test(model, val_data, n_way, n_support, n_query, test_episode)"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1757,7 +1749,7 @@
         "my_sample = extract_sample(n_way, n_support, n_query, val_data)\n",
         "display_sample(my_sample['images'])"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1789,7 +1781,7 @@
       "source": [
         "my_loss, my_output = model.set_forward_loss(my_sample)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1804,7 +1796,7 @@
       "source": [
         "print(f\"Acc:{my_output['acc']} , Loss:{my_output['loss']}\")"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
