--- a/PHYLUM_Image_Transformer.ipynb
+++ b/PHYLUM_Image_Transformer.ipynb
@@ -9132,6 +9132,22 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "rWGfaL2lriQt"
+      },
+      "source": [
+        "!git clone https://github.com/hila-chefer/Transformer-Explainability.git\n",
+        "\n",
+        "import os\n",
+        "os.chdir(f'./Transformer-Explainability')\n",
+        "\n",
+        "!pip install -r -q requirements.txt"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "iMtiu3EASowt",
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -9288,7 +9304,14 @@
         "import pytorch_lightning as pl\n",
         "from pytorch_lightning.callbacks.early_stopping import EarlyStopping\n",
         "\n",
-        "from pytorch_lightning.callbacks import ModelCheckpoint"
+        "from pytorch_lightning.callbacks import ModelCheckpoint\n",
+        "\n",
+        "from PIL import Image\n",
+        "import torchvision.transforms as transforms\n",
+        "import matplotlib.pyplot as plt\n",
+        "import torch\n",
+        "import numpy as np\n",
+        "import cv2"
       ],
       "execution_count": 4,
       "outputs": []
@@ -9775,8 +9798,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "h9f2EqkbATK_",
-        "outputId": "40a30339-b18e-43cb-efe8-760b305aebb5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 487,
@@ -10078,7 +10099,9 @@
             "22e556cf3da2477aa2dbb783c0ea1060",
             "32eb405acce34a5eb7583a573b15f1b3"
           ]
-        }
+        },
+        "id": "h9f2EqkbATK_",
+        "outputId": "40a30339-b18e-43cb-efe8-760b305aebb5"
       },
       "source": [
         "early_stop_callback = EarlyStopping(\n",
@@ -11123,6 +11146,84 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j1JmtrGwrx0y"
+      },
+      "source": [
+        "from baselines.ViT.ViT_LRP import vit_base_patch16_224 as vit_LRP\n",
+        "from baselines.ViT.ViT_explanation_generator import LRP\n",
+        "\n",
+        "normalize = transforms.Normalize(mean=[0.5, 0.5, 0.5], std=[0.5, 0.5, 0.5])\n",
+        "transform = transforms.Compose([\n",
+        "    transforms.Resize(256),\n",
+        "    transforms.CenterCrop(224),\n",
+        "    transforms.ToTensor(),\n",
+        "    normalize,\n",
+        "])\n",
+        "\n",
+        "# create heatmap from mask on image\n",
+        "def show_cam_on_image(img, mask):\n",
+        "    heatmap = cv2.applyColorMap(np.uint8(255 * mask), cv2.COLORMAP_JET)\n",
+        "    heatmap = np.float32(heatmap) / 255\n",
+        "    cam = heatmap + np.float32(img)\n",
+        "    cam = cam / np.max(cam)\n",
+        "    return cam\n",
+        "\n",
+        "# initialize ViT pretrained\n",
+        "model = vit_LRP(pretrained=True).cuda()\n",
+        "model.eval()\n",
+        "attribution_generator = LRP(model)\n",
+        "\n",
+        "def generate_visualization(original_image, class_index=None):\n",
+        "    transformer_attribution = a.generate_LRP(original_image.unsqueeze(0).cuda(), method=\"transformer_attribution\", index=class_index).detach()\n",
+        "    transformer_attribution = transformer_attribution.reshape(1, 1, 14, 14)\n",
+        "    transformer_attribution = torch.nn.functional.interpolate(transformer_attribution, scale_factor=16, mode='bilinear')\n",
+        "    transformer_attribution = transformer_attribution.reshape(224, 224).cuda().data.cpu().numpy()\n",
+        "    transformer_attribution = (transformer_attribution - transformer_attribution.min()) / (transformer_attribution.max() - transformer_attribution.min())\n",
+        "    image_transformer_attribution = original_image.permute(1, 2, 0).data.cpu().numpy()\n",
+        "    image_transformer_attribution = (image_transformer_attribution - image_transformer_attribution.min()) / (image_transformer_attribution.max() - image_transformer_attribution.min())\n",
+        "    vis = show_cam_on_image(image_transformer_attribution, transformer_attribution)\n",
+        "    vis =  np.uint8(255 * vis)\n",
+        "    vis = cv2.cvtColor(np.array(vis), cv2.COLOR_RGB2BGR)\n",
+        "    return vis\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uAsd7QIer0wY"
+      },
+      "source": [
+        "image = Image.open('samples/catdog.png') ##\n",
+        "dog_cat_image = transform(image)\n",
+        "\n",
+        "fig, axs = plt.subplots(1, 3)\n",
+        "axs[0].imshow(image);\n",
+        "axs[0].axis('off');\n",
+        "\n",
+        "output = model(dog_cat_image.unsqueeze(0).cuda())\n",
+        "\n",
+        "\n",
+        "# cat - the predicted class\n",
+        "cat = generate_visualization(dog_cat_image)\n",
+        "\n",
+        "# dog \n",
+        "# generate visualization for class 243: 'bull mastiff'\n",
+        "dog = generate_visualization(dog_cat_image, class_index=243)\n",
+        "\n",
+        "\n",
+        "axs[1].imshow(cat);\n",
+        "axs[1].axis('off');\n",
+        "axs[2].imshow(dog);\n",
+        "axs[2].axis('off');"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
